--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "grunt-contrib-jasmine": "^0.6.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-testem": "^0.5.16",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "karma": "^0.12.17",
+    "karma-jasmine": "^0.2.2"
   },
   "dependencies": {
     "jquery": "^2.1.1",
